# retark

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
data/: post_mini.json  qa_mini.json
src/: config.py  data_utils.py
src/retark/: config.py  dapt.py  data_utils.py  main.py  sft.py
test/: test_data_util.py
